# logger-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  launch_db_view.sh  pyproject.toml  run_server.sh  storage.py
.github/workflows/: docker-publish.yml
cmd/bot/: main.go
docs/superpowers/plans/: 2026-05-06-split-whisper-go-bot.md
docs/superpowers/specs/: 2026-05-06-split-whisper-go-bot-design.md
e2e/: test_compose.sh
imgs/: architecture.mmd
internal/extraction/: parse.go  parse_test.go
internal/store/: store.go  store_test.go
internal/telegram/: audio.go  health.go  last.go  middleware.go  middleware_test.go  sql.go
internal/whisper/: client.go
proto/: transcribe.proto
src/logger_bot/: __init__.py  extraction.py  logger.py  loggers.py  main.py  model.py
